settings: Correct bottom border on mobile headings.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1475,7 +1475,7 @@ label.preferences-radio-choice-label {
 
         &.mobile {
             display: none;
-            border-bottom: 1px solid hsl(0deg 0% 87%);
+            border-bottom: 1px solid var(--color-border-modal-bar);
 
             .fa-chevron-left {
                 float: left;
